last changes in Style

--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,4 @@ h1, h2, h4, p{
   margin-right: auto;
   width: 700px; /* Need a specific value to work */
 }
+/* Doston Hamrakulov created for Artificial Intelligence course using Minimax Algorithm */
